--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --inspect",
-    "start": "nodemon",
+    "start": "node src/server.js",
     "test": "node ace test",
     "migrate": "ENV_SILENT=true node ace migration:run --force"
   },
