--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0",
     "sucrase": "^3.17.1",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "sequelize-cli": "^6.2.0"
+    "nodemon": "^2.0.7"
   }
 }
