--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-redis-cache": "^1.1.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-express": "^1.1.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
+    "redis": "^3.1.2",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0",
     "sucrase": "^3.17.1",
